# fastapi-socketio-handler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
socketio_handler/: __init__.py  app.py  handler.py  socket_registry.py
tests/: conftest.py  test_integration_socketio.py  test_socket_manager.py
