[tool.poetry]
name = "fastapi-socketio-handler"
version = "0.1.0"
description = "Socket.IO wrapper for FastApi applications"
authors = ["Nazarii <bandirom@ukr.net>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "socketio_handler" }]
homepage = "https://github.com/bandirom/fastapi-socketio-handler"
repository = "https://github.com/bandirom/fastapi-socketio-handler"
keywords = [
    "socketio", "asyncio", "websockets", "python-socketio",
    "asyncio-socketio", "websockets-handler", "fastapi"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",

    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
]


[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "*"
sqlalchemy = ">=2.0.42,<3.0.0"
python-socketio = { extras = ["asyncio"], version = ">=5.13.0,<6.0.0" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.1"
pytest-asyncio = "^0.26"
black = "^25.1"
isort = "^6.0"
httpx = "^0.28"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
skip = ["venv"]
line_length = 120
include_trailing_comma = true
profile = "black"
